--- a/formulario.html
+++ b/formulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Registro</title>
+    <title>AdRegistro</title>
 </head>
 <body>
     <form action="add.php" method="POST" enctype="multipart/form-data">
